# brukarze

./: feature-plan.md  pyproject.toml  requirements.txt
project/: settings.py  urls.py
workers/: admin.py  decorators.py  forms.py  models.py  urls.py  utils.py  views.py
workers/migrations/: 0001_initial.py
workers/templates/: base.html  brygadzista_dashboard.html
workers/templates/registration/: login.html  szef_registration.html  szef_registration_closed.html
workers/templates/workers/: szef_dashboard.html  test.html  workers.html
workers/templates/workers/partials/: _create_worker_modal.html  _worker_table.html
workers/templatetags/: auth_tags.py
